--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,10 @@
         </select>
       </li>
       <li>
+        <label>URL Portada</label>
+        <input class="picker" for="background" type="text" />
+      </li>
+      <li>
         <label>Name</label>
         <input class="picker" for="name" type="text" />
       </li>
@@ -80,6 +84,10 @@
           <option value="Canada">Canada</option>
           <option value="Venezuela">Venezuela</option>
         </select>
+      </li>
+      <li>
+        <label>URL Photos</label>
+        <input class="picker" for="avatarURL" type="text" />
       </li>
     </ul>
     <div id="widget_content"></div>
